--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <header>
     <h1>Travel</h1>
@@ -18,17 +20,21 @@
                 <p>Found in southwestern Utah, Zion National Park spreads over 229 square miles. The park is known for its sandstone cliffs, deep canyons, and vast mesas, giving it a unique beauty that everyone should try to experience . Along with this Zion offers a wide variety of Flora and Fauna that differs each season making it a hot destination all year round.</p>
                 <p>Having over 112 trails available to hike, walk, and even camp at, people from all over the world are traveling to Zion to see just how amazing it truly is. With trails that range from riverside walks all the way to hikes that have you scaling long bluffs to reach a peak, Zion has something that every outdoorsman can enjoy. However it is not all sunshines and rainbows, and there are dangers that come with these trails that all hikers should read and learn about before their expedition.</p>
                 <h3>Photo Gallery</h3>
-                <img src="Images/Zion_Angels_Landing.jpg" alt="Zion_Angels_Landing.jpeg" width="200" height="200">
-                <img src="Images/Zion_Large_Canyon.jpg" alt="Zion_Large_Canyon.jpg" width="200" height="200">
-                <img src="Images/Zion_River_Tunnel.jpg" alt="Zion_River_Tunnel.jpg" width="200" height="200">
-                <img src="Images/Zion_River_Walk.jpg" alt="Zion_River_Walk.jpg" width="200" height="200">
-                <img src="Images/Zion_Winter.jpg" alt="Zion_Winter.jpg" width="200" height="200">
+                <img src="Images/Zion_Angels_Landing.jpg" alt="Angels Landing hike from afar" width="200" height="200">
+                <img src="Images/Zion_Large_Canyon.jpg" alt="Deep canyon in the summer" width="200" height="200">
+                <img src="Images/Zion_River_Tunnel.jpg" alt="Water tunnel" width="200" height="200">
+                <img src="Images/Zion_River_Walk.jpg" alt="River Walk" width="200" height="200">
+                <img src="Images/Zion_Winter.jpg" alt="Zion in the Winter" width="200" height="200">
                 <h3>Likes</h3>
-                <li></li>
+                <li>Amazing Views</li>
+                <li>Awesome Hikes</li>
+                <li>Beautiful River Walks</li>
             
         </body>
     </div>
-    <div></div>
+    <div>
+        
+    </div>
     <div></div>
     <div></div>
     <div></div>
