--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         <h2>Zion National Park</h2>
         <body>
-            <img src="Images/Zion_River.jpg" alt="Zion_River.jpg" width="400" height="400">
+            <img src="Images/Zion_River.jpg" alt="Zion River" width="400" height="400">
             <h3>Geographical Location: North America</h3>
             
                 <p>Found in southwestern Utah, Zion National Park spreads over 229 square miles. The park is known for its sandstone cliffs, deep canyons, and vast mesas, giving it a unique beauty that everyone should try to experience . Along with this Zion offers a wide variety of Flora and Fauna that differs each season making it a hot destination all year round.</p>
